notejam/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notejam
  name: notejam
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: notejam
